--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
 
             <div id="sec-div" class="lineUp" style="display: none">
-                <img class="preload" src="images/dancing_astronaut.png" alt="astronaut_dance">
+                <img  src="images/dancing_astronaut.png" alt="astronaut_dance">
             </div>
 
         </section>
@@ -96,7 +96,7 @@
                 </div>
            </div>
             <div class="profile-photo reveal fade-bottom">
-                    <img class="preload" src="images/dogBW.png" alt="profile-pic">
+                    <img  src="images/dogBW.png" alt="profile-pic">
 
             </div>
             <div class="random-facts-box reveal fade-bottom">
@@ -219,22 +219,22 @@
             <div class="snaps-div" style="visibility: visible; opacity: 1;">
 
                     <a  id="snaps-1" target="_blank" href="#" onClick="return false;">
-                        <img class="preload snaps reveal fade-bottom" src="images/minime.png" alt="Mini me">
+                        <img class=" snaps reveal fade-bottom" src="images/minime.png" alt="Mini me">
                     </a>
                     <a id="snaps-2" target="_blank" href="#" onClick="return false;">
-                        <img class="preload snaps reveal fade-bottom" src="images/hawamehal.png" alt="Hawa Mehal">
+                        <img class=" snaps reveal fade-bottom" src="images/hawamehal.png" alt="Hawa Mehal">
                     </a>
                     <a id="snaps-3" target="_blank" href="#" onClick="return false;">
-                        <img class="preload snaps reveal fade-bottom" src="images/aayumuumipapa.jpg" alt="Mom Dad">
+                        <img class=" snaps reveal fade-bottom" src="images/aayumuumipapa.jpg" alt="Mom Dad">
                     </a>
                     <a id="snaps-4" target="_blank" href="#" onClick="return false;">
-                        <img class="preload snaps reveal fade-bottom" src="images/amerfort.png" alt="My Home town">
+                        <img class=" snaps reveal fade-bottom" src="images/amerfort.png" alt="My Home town">
                     </a>
                     <a id="snaps-5" target="_blank" href="#" onClick="return false;">
-                        <img class="preload snaps reveal fade-bottom" src="images/aayudaata.jpg" alt="My Grand-dad">
+                        <img class=" snaps reveal fade-bottom" src="images/aayudaata.jpg" alt="My Grand-dad">
                     </a>
                     <a id="snaps-6" target="_blank" href="#" onClick="return false;">
-                        <img class="preload snaps reveal fade-bottom" src="images/pratap.png" alt="Maharana Pratap">
+                        <img class=" snaps reveal fade-bottom" src="images/pratap.png" alt="Maharana Pratap">
                     </a>
             </div>
             <div class="achievements-box reveal fade-bottom">
