--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         >> Forest Gump<br>
                         >> Hera Pheri<br>
                         >> 3 Idiots<br>
-                        (list updated regularly)
+                        (list updates regularly)
                     </p>
                     <br>
                     <p>
