--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
                         >> The Shawshank Redemption<br>
                         >> The Social Network<br>
                         >> Flipped<br>
-                        >> Space Between Us<br>
-                        >> Harry potter Series<br>
+                        >> Meet Joe Black<br>
+                        >> Harry Potter Series<br>
                         >> The F**k-It List<br>
                         >> The Bucket List<br>
                         >> Forest Gump<br>
