--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
                         <strong>Favorite movies</strong>
                         <br>
                         >> Interstellar<br>
+                        >> Dead Poets Society<br>
                         >> The Shawshank Redemption<br>
                         >> The Social Network<br>
                         >> Flipped<br>
