--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
                         <br>
                         >> Interstellar<br>
                         >> Dead Poets Society<br>
+                        >> The Notebook<br>
                         >> The Shawshank Redemption<br>
                         >> The Social Network<br>
                         >> Flipped<br>
