--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             I'm a bit of an optimistic
                         </p>
                         <p>
-                            I love to watch sci-fi & inspiring films
+                            I love to watch inspiring & romantic films
                         </p>
                         <p>
                             I'm into logo design
