--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta name="google-site-verification" content="JqpxQRWnnovhgn6EPpnBAAzfREoPKXXo-CIrQKzS2us" />
+<link rel="canonical" href="https://ambayagya.tech" />
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/29889e31b7.js" crossorigin="anonymous"></script>
