--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta name="google-site-verification" content="JqpxQRWnnovhgn6EPpnBAAzfREoPKXXo-CIrQKzS2us" />
-<link rel="canonical" href="https://ambayagya.tech" />
+    <meta name="msvalidate.01" content="7C0C0AA66C8B38BF05ED638117184249" /> <!microsoft binge verification>
+    <link rel="canonical" href="https://ambayagya.tech" />
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
