--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="google-site-verification" content="JqpxQRWnnovhgn6EPpnBAAzfREoPKXXo-CIrQKzS2us" />
     <meta name="msvalidate.01" content="7C0C0AA66C8B38BF05ED638117184249" /> <!microsoft binge verification>
+    <link rel="canonical" href="https://ambayagya.tech/contact.html" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Contact Ambayagya</title>
