--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
                     <p class="description">I began learning coding in 2020 since I'd always wanted to create my own applications
                         and websites. But I knew nothing about coding at the time, so I began looking for it on the internet,
                         and fortunately, I discovered a free Google course for developing Android apps, so I enrolled in it.
-                        That same day, I made a one-page app that merely displays my name on the screen, but it made me very
+                        That same day, I made a one-page app that merely displayed my name on the screen, which made me very
                         pleased. That's when I fell in love with coding. Since then, I've learnt python programming, front-end
-                        development, and (to a lesser extent) android app development through tonnes of online tutorials, classes,
-                        and a lot of hard work. I'm currently exploring a variety of different fields in IT industry.
+                        development, and (to a lesser extent) Android app development through tonnes of online tutorials, classes,
+                        and a lot of hard work. I'm currently exploring a variety of different fields in the IT industry.
                         <br>
                         <br>
                          When I'm not in front of my computer, you'll find me playing with dogs (yeah, I love dogs), watching films,
-                        working out in the gym (sometimes in the park), sleeping on my bed or hanging out with friends and family.
+                        working out in the gym (sometimes in the park), sleeping on my bed, or hanging out with friends and family.
                     </p>
 
                 </div>
@@ -113,7 +113,7 @@
                             I like making things and meeting new people
                         </p>
                         <p>
-                            My dream is to actually travel into space
+                            My dream is to travel into space
                         </p>
                         <p>
                             I'm a bit of an optimistic
@@ -156,7 +156,7 @@
                     <p>
                         <strong>When I started as a developer</strong>
                         <br>
-                        2020(just after corona take over the world, and I have nothing to do, so I started learning coding).
+                        2020(just after Corona took over the world, I had nothing to do, so I started learning coding).
                     </p>
                     <br>
                     <p>
@@ -199,7 +199,7 @@
                         >> The F**k-It List<br>
                         >> The Bucket List<br>
                         >> Forest Gump<br>
-                        >> Sanam Teri Kasam<br>
+                        >> October Sky<br>
                         >> Hera Pheri<br>
                         >> 3 Idiots<br>
                         (list updates regularly)
@@ -425,7 +425,7 @@
     <div class="rotate-your-device">
         <h3 style="color: white; font-size:1.5rem; margin:40vh 0 0 0">PLEASE ROTATE YOUR DEVICE</h3>
         <p>We don't support landscape mode yet.<br>
-            Please go back to portrait mode for better experience.</p>
+            Please go back to portrait mode for a better experience.</p>
     </div>
 
   <script>
