--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <p>
                         <strong>Education</strong>
                         <br>
-                        Bachelor of Science at S.S Jain Subodh College, tonnes of online courses, and many
+                        Bachelor of Science, tonnes of online courses, and many
                         years of practice and experimenting.
                     </p>
                     <br>
@@ -413,7 +413,7 @@
                         </div>
                     <div class="copyright-line">
                         <h3>Handcrafted by me with love.</h3>
-                        <small>&copy; 2023 Ambayagya Singh Rathore</small>
+                        <small>&copy; 2024 Ambayagya Singh Rathore</small>
                     </div>
                 </div>
             </div>
