--- a/index.html
+++ b/index.html
@@ -252,29 +252,29 @@
                     <div id="achievements-wrap" class="reveal fade-in">
                         <h2>Achievements</h2>
                         <p>
-                            Learned numerous skills, which I never used
+                            Learned numerous skills - used almost none
                         </p>
                         <p>
-                            Coded 55 lines of code with no error
+                            Coded 55 lines of code without a single error
                         </p>
                         <p>
-                            Watched entire Harry Potter series in a weekend
+                            Watched the entire Harry Potter series in one weekend
                         </p>
                         <p>
-                            I understood the (movie) Interstellar
+                            Understood *Interstellar*... probably
                         </p>
                         <p>
-                            Won a gold medal in absolutely nothing
+                            Expert at imagining fake scenarios - usually at 2AM
                         </p>
                         <p>
-                            Mastered the skill of imagining fake scenarios
+                            Won a gold medal... in nothing
                         </p>
                         <p>
-                            Successfully wasted 3 years for a college degree
+                            Completed a college degree - still figuring out what it's for
                         </p>
                         <p>
-                            Wrote this entire section with no shame on my face<br>
-                            <em>(that should have been on my face!)</em>
+                            Wrote this section myself, proudly- no regrets<br>
+                            <em>(okay... maybe this line)</em>
                         </p>
                     </div>
                 </div>
