--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                             Watched the entire Harry Potter series in one weekend
                         </p>
                         <p>
-                            Understood *Interstellar*... probably
+                            Understood <em>Interstellar</em>... probably
                         </p>
                         <p>
                             Expert at imagining fake scenarios - usually at 2AM
